ava-rs/tui/src/bottom_pane/chat_composer/snapshots/ava_tui__bottom_pane__chat_composer__sparkle__tests__a_fresh_astra_response_waits_for_the_pending_command_to_leave.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
assertion_line: 561
expression: "format!(\"command during startup:\\n{}\\n\\nafter command:\\n{}\", text(&pending),\ntext(&completed))"
---
command during startup:
› /status      show current session configuration and token usage
  /statusline  configure which items appear in the status line

› /status

                                                             100% context left

after command:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ava to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
