ava-rs/tui/src/bottom_pane/chat_composer/snapshots/ava_tui__bottom_pane__chat_composer__sparkle__tests__history_search_acceptance_and_cancellation_update_sparkles_before_rendering.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
accept:

› Ask Ava to do anything

  ? for shortcuts                                            100% context left

escape:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ava to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
