ava-rs/tui/src/bottom_pane/chat_composer/snapshots/ava_tui__bottom_pane__chat_composer__sparkle__tests__history_search_preserves_a_held_sparkle_command_without_reclassifying_it.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
gpt-6-astra
searching with an explicit pasted query:

› history prompt

  reverse-i-search: history  enter accept · esc cancel
after canceling and erasing the slash:
                                        ⠁               ⡀   ⠄           ⠄   ⠄
› Ask Ava to do anything                                   ⠈
      ⠠                             ⠠        ⢀ ⢀     ⡀                         ⠄
  ? for shortcuts                                            100% context left
after /model selects Astra:
                                        ⠁               ⡀   ⠄           ⠄   ⠄
› Ask Ava to do anything                                   ⠈
      ⠠                             ⠠        ⢀ ⢀     ⡀                         ⠄
  ? for shortcuts                                            100% context left

gpt-5.5
searching with an explicit pasted query:

› history prompt

  reverse-i-search: history  enter accept · esc cancel
after canceling and erasing the slash:

› Ask Ava to do anything

  ? for shortcuts                                            100% context left
after /model selects Astra:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ava to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left
