ava-rs/tui/src/bottom_pane/chat_composer/snapshots/ava_tui__bottom_pane__chat_composer__sparkle__tests__shortcut_help_preserves_an_unused_sparkle_but_literal_question_marks_do_not.snap
---
source: tui/src/bottom_pane/chat_composer/sparkle_tests.rs
assertion_line: 365
expression: "snapshots.join(\"\\n\\n\")"
---
shortcut help:
  Keyboard shortcuts

  Compose                       Session
  /        Commands             tab     Send message
  @        Mention files        ⌥+,     Less reasoning
  !        Shell command        ⌥+.     More reasoning
  ctrl+j   New line             ctrl+c  Quit
  ctrl+v   Paste image
  ctrl+g   External editor      Transcript (open first)
  ctrl+r   Search history       ctrl+t                 Open transcript
  esc esc  Edit last message    f3                     Find text
                                pgup / pgdn            Scroll
                                ctrl+space             Start selection
                                ctrl+home / ctrl+end   Top / latest
                                shift+⌥+, / shift+⌥+.  Top / latest

  /keymap customize

› Ask Ava to do anything

  ? / esc close

after /model selects Astra:
                            ⠈     ⢀     ⠁                 ⠂
›⠁Ask Ava to do anything         ⠈      ⠁
       ⢀            ⠠     ⠄         ⠠          ⢀    ⠠     ⡀
  ? for shortcuts                                            100% context left

literal pasted question mark:

› ?

                                                             100% context left

after clearing and selecting Astra:

› Ask Ava to do anything

  ? for shortcuts                                            100% context left
